--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li>I Like Makeup</li>
 
     </ol>
-<h3> Contaxt me at</h3>
+<h3> Contact me at</h3>
     <a href="https://www.instagram.com/p1xi333/"> <img src="insta.jpg" height="100" ></a>
     <a href="https://www.tiktok.com/@p1xi333"> <img src="tiktok.png" height="100" ></a>
 </body>
